--- a/zuul-9527-bootstrap.yml
+++ b/zuul-9527-bootstrap.yml
@@ -2,6 +2,8 @@ zuul:
   routes:
     management.serviceId: hrm_management # 服务名
     management.path: /management/**
+    course.serviceId: hrm_course # 服务名
+    course.path: /course/**
   ignored-services: "*" #所有服务都不允许以服务名来访问
   prefix: "/services" #加一个统一前缀
   retryable: true #是否重试
