--- a/zuul-9527-bootstrap.yml
+++ b/zuul-9527-bootstrap.yml
@@ -1,3 +1,8 @@
+server:
+  port: 9527
+spring:
+  application:
+    name: zuul-gateway
 zuul:
   routes:
     management.serviceId: hrm_management # 服务名
