--- a/service-9002-bootstrap.yml
+++ b/service-9002-bootstrap.yml
@@ -9,5 +9,5 @@ spring:
       username: root
       password: 123456
 mybatis-plus:
-  mapper-locations: classpath:cn/itsource/hrm/mapper/*Mapper.xml
-  type-aliases-package: cn.itsource.hrm.domain,cn.itsource.hrm.query
+  mapper-locations: classpath:com/yyx/hrm/mapper/*Mapper.xml
+  type-aliases-package: com.yyx.hrm.domain,com.yyx.hrm.query
