--- a/zuul-9527-bootstrap.yml
+++ b/zuul-9527-bootstrap.yml
@@ -9,6 +9,8 @@ zuul:
     management.path: /management/**
     course.serviceId: hrm_course # 服务名
     course.path: /course/**
+    fastdfs.serviceId: hrm_fastdfs # 服务名
+    fastdfs.path: /fastdfs/**
   ignored-services: "*" #所有服务都不允许以服务名来访问
   prefix: "/services" #加一个统一前缀
   retryable: true #是否重试
